# gtk-circle-to-search

./: .gitignore  README.md  cairo_helpers.py  main.py  meson.build  overlay.py  pyproject.toml
.github/workflows/: flatpak.yml
data/: com.github.circle-to-search.desktop  com.github.circle_to_search.gresource.xml  me.bobbyho.CircleToSearch.desktop  me.bobbyho.CircleToSearch.gresource.xml  meson.build  style.css
data/ui/: main-window.blp  meson.build  translator-pane.blp
flatpak/: circle-to-search  com.github.circle-to-search.yml  me.bobbyho.CircleToSearch.yml
gtk_circle_to_search/: main.py
gtk_circle_to_search/ui/: App.py  MainWindow.py  __init__.py
gtk_circle_to_search/ui/assets/: main-window.ui  translator-pane.ui
src/gtk_circle_to_search/: __main__.py  application.py  meson.build  resources.py
src/gtk_circle_to_search/ocr/: meson.build
src/gtk_circle_to_search/ui/: __init__.py  image_text_overlay.py  main_window.py  meson.build  translator_pane.py
src/ocr/: ocr.py
src/ui/: App.py  ImageTextOverlay.py  MainWindow.py  TranslatorPane.py  __init__.py
src/ui/assets/: main-window.blp  main-window.ui  translator-pane.blp  translator-pane.ui
widgets/: ScreenshotView.py  __init__.py
