[project]
name = "gtk-circle-to-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.9.0",
    "llama-cpp-python>=0.3.20",
    "pydantic>=2.12.5",
    "pygobject>=3.56.2",
    "pytesseract>=0.3.13",
]

[dependency-groups]
dev = [
    "pygobject-stubs>=2.17.0",
]

[tool.uv.sources]
llama-cpp-python = { git = "https://github.com/JamePeng/llama-cpp-python" }

[tool.uv.extra-build-variables]
llama-cpp-python = { LLAMA_CMAKE_ARGS = "-DGGML_VULKAN=on" }
