[project]
name = "gtk-circle-to-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "onnxruntime>=1.27.0",
    "opencv-python>=5.0.0.93",
    "rapidocr>=3.9.1",
    "translators>=6.0.4",
]

[dependency-groups]
dev = [
    "pygobject-stubs>=2.17.0",
]
