[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
name = "gtk-circle-to-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=5.4.0",
    "onnxruntime>=1.27.0",
    "opencv-python>=5.0.0.93",
    "rapidocr>=3.9.1",
    "translators>=6.0.4",
]

[dependency-groups]
dev = [
    "pygobject-stubs>=2.17.0",
]

[project.scripts]
circle-to-search = "gtk_circle_to_search.__main__:main"
